--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.12.0",
     "i2c": "^0.1.8",
+    "jade": "^1.9.2",
     "mpu9150": "0.0.1",
     "ms5803_rpi": "^0.1.0"
   },
