--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": ""
   },
   "dependencies": {
+    "ejs": "^2.3.1",
     "express": "^4.12.0",
     "i2c": "^0.1.8",
     "jade": "^1.9.2",
