Added required modules

--- a/RTIMULib.ini
+++ b/RTIMULib.ini
@@ -65,13 +65,13 @@ I2CPressureAddress=0
 # 
 
 # Compass calibration settings
-CompassCalValid=true
-CompassCalMinX=-57.203979
-CompassCalMinY=-33.501171
-CompassCalMinZ=-72.174492
-CompassCalMaxX=34.633205
-CompassCalMaxY=50.610344
-CompassCalMaxZ=22.017637
+CompassCalValid=false
+CompassCalMinX=0.000000
+CompassCalMinY=0.000000
+CompassCalMinZ=0.000000
+CompassCalMaxX=0.000000
+CompassCalMaxY=0.000000
+CompassCalMaxZ=0.000000
 
 # #####################################################################
 # 
@@ -102,22 +102,22 @@ compassCalCorr33=1.000000
 # 
 
 # Accel calibration
-AccelCalValid=true
-AccelCalMinX=-0.964810
-AccelCalMinY=-0.930527
-AccelCalMinZ=-0.940400
-AccelCalMaxX=0.950102
-AccelCalMaxY=1.299653
-AccelCalMaxZ=0.990728
+AccelCalValid=false
+AccelCalMinX=0.000000
+AccelCalMinY=0.000000
+AccelCalMinZ=0.000000
+AccelCalMaxX=0.000000
+AccelCalMaxY=0.000000
+AccelCalMaxZ=0.000000
 
 # #####################################################################
 # 
 
 # Saved gyro bias data
 GyroBiasValid=true
-GyroBiasX=0.021350
-GyroBiasY=0.007755
-GyroBiasZ=-0.018041
+GyroBiasX=0.023487
+GyroBiasY=0.010477
+GyroBiasZ=-0.034259
 
 # #####################################################################
 # 
